--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     
+  <header>
+    <nav>
+     <ul>
+        <li><a href="#home">Home</a></li> 
+        <li><a href="#Languages">Languages</a></li>
+        <li><a href="#contact">Contact</a></li>
+     </ul>
+    </nav>
+ </header>
 </body>
 </html>
