--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
      <ul>
         <li><a href="#home">Home</a></li> 
-        <li><a href="#Languages">Languages</a></li>
+        <li><a href="#languages">Languages</a></li>
         <li><a href="#contact">Contact</a></li>
      </ul>
     </nav>
