create hero section

--- a/index.html
+++ b/index.html
@@ -17,5 +17,16 @@
      </ul>
     </nav>
  </header>
+
+  <main>
+    <section class="hero" id="home">
+      <div class="hero-image">
+        <div class="hero-text">
+        <h1>I am Violetta</h1>
+        <p>And I'm a polyglot</p>
+        </div>
+      </div>
+    </section>
+  </main>  
 </body>
 </html>
